--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "pm2 start app.js"
+    "start": "node app.js"
   },
   "nodemonConfig": {
     "restartable": "rs",
